--- a/src/main/resources/petstore.properties
+++ b/src/main/resources/petstore.properties
@@ -3,5 +3,6 @@ petstore.base.path=v2
 petstore.get.inventory=/store/inventory
 petstore.get.inventory.by.id=/store/order/{orderId}
 petstore.create.order=/store/order
+petstore.add.pet=/pet
 petstore.create.user=/user
 petstore.get.by.username=/user/{username}
