test https://petstore.swagger.io GetUserLogin Start

--- a/src/main/resources/petstore.properties
+++ b/src/main/resources/petstore.properties
@@ -6,3 +6,4 @@ petstore.create.order=/store/order
 petstore.add.pet=/pet
 petstore.create.user=/user
 petstore.get.by.username=/user/{username}
+petstore.get.by.user=/user/loginUser
