--- a/src/main/resources/petstore.properties
+++ b/src/main/resources/petstore.properties
@@ -4,5 +4,6 @@ petstore.get.inventory=/store/inventory
 petstore.get.inventory.by.id=/store/order/{orderId}
 petstore.create.order=/store/order
 petstore.add.pet=/pet
+petstore.get.by.pet=/pet/{petId}
 petstore.create.user=/user
 petstore.get.by.username=/user/{username}
