--- a/src/main/resources/petstore.properties
+++ b/src/main/resources/petstore.properties
@@ -8,3 +8,7 @@ petstore.get.petsby.status=/pet/findByStatus
 petstore.get.by.pet=/pet/{petId}
 petstore.create.user=/user
 petstore.get.by.username=/user/{username}
+petstore.update.user.by.username=/user/{username}
+petstore.logout=/user/logout
+petstore.update.pet=/pet
+petstore.delete.pet.by.id=/pet/{petId}
