--- a/src/main/resources/petstore.properties
+++ b/src/main/resources/petstore.properties
@@ -8,3 +8,4 @@ petstore.get.petsby.status=/pet/findByStatus
 petstore.get.by.pet=/pet/{petId}
 petstore.create.user=/user
 petstore.get.by.username=/user/{username}
+petstore.get.by.loginUser=/user/login
